fix: shift dum_venku crop further up (30% -> 20%)

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 #header-carousel .carousel-item:nth-child(2) img {
-    object-position: center 30%;
+    object-position: center 20%;
 }
 
 #header-carousel .carousel-item:nth-child(3) img {
